--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=Zen+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
 html {
   box-sizing: border-box;
 }
@@ -203,4 +204,9 @@ li span {
   li span {
     font-size: 40px;
   }
+}
+.credits{
+  font-weight: 600;
+  font-family: sofia, cursive;
+  font-size: 2rem;
 }
